Aegisub changelog
Please visit http://aegisub.net to download latest version

= 2.2.0 - 2008.xx.xx ===========================

- New Aegisub logo. (amz)
- The Automation 4 system has been introduced. This means lots of changes. (jfs)
  o The Lua engine is now based on Lua 5.1, which means a few new language features.
  o A Ruby 1.9-based scripting engine has been added (Pomyk)
  o Legacy Automation 3 scripts are still supported and is still based on Lua 5.0 to avoid compatibility problems
    - Note that some scripts might still need minor changes to work
  o It is now possible to write macros that manipulate subtitles directly
  o Scripts have full access to the entire subtitle file, not only the "Events" section
  o Scripts are automatically reloaded when the Export dialog is opened (this can be changed in Options)
    - Ctrl or Ctrl+Shift click on the Automation toolbar button to reload autoload/all scripts
- Video mode changes:
  o It has been mostly rewriten and now uses OpenGL instead of software rendering, making it much faster on computers with video cards that don't belong to the stone age. (amz)
  o Optionally, it can use a Pixel Shader to convert YV12 to RGB32 in hardware, which is much faster, with a decent video card. (amz)
  o Video display fixed on Linux and Mac (Azzy)
  o Made the video display detachable. (amz)
  o Fixed Custom Aspect Ratio input. (Dansolo)
  o Added a dummy video provider to create a blank video with customizeable options. (jfs/amz)
  o Destination of screenshots can now be set in the options dialog. (amz)
  o Added support for using other renderers than VSFilter with Avisynth as video provider. (amz)
  o Added support for FFMpegSource in Avisynth provider if FFMpegSource.dll is on Aegisub's folder. (amz)
  o Added support for DirectShowSource2 in Avisynth provider if avss.dll is on Aegisub's folder. (amz)
  o Added support to save and load keyframe list files. (amz)